<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <include
        layout="@layout/item_calendar"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <Button
        android:id="@+id/alarm_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="43dp"
        android:text="@string/off"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="83dp" />

    <Button
        android:id="@+id/alarm_snooze"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="85dp"
        android:text="@string/snooze_enable"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="83dp" />

    <TextView
        android:id="@+id/deficit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="198dp"
        android:text="@string/deficit" />

    <TextView
        android:id="@+id/deficit_value"
        android:layout_width="66dp"
        android:layout_height="38dp"
        android:layout_alignTop="@+id/deficit"
        android:layout_centerHorizontal="true"
        android:text="" />

</RelativeLayout>